--- a/style.css
+++ b/style.css
@@ -38,18 +38,52 @@ main {
   display: flex;
 }
 
+/* CARD */
+
 .card {
   background-color: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
   width: 30rem;
+  height: 24rem;
   margin: auto;
-  border-radius: 0.4rem;
+}
+
+/* CARD IMG */
+
+.card .card_img {
+  height: 100%;
 }
 
 .card .card_img img {
-  width: 100%;
+  height: 100%;
+}
+
+/* CARD INFO */
+
+.card .card_info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin: 0.1rem 1rem;
+}
+
+.card .card_info h2 {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 500;
+  color: var(--dark-grayish-blue);
+  letter-spacing: 0.2rem;
+  margin-bottom: 1.5rem;
+}
+
+.card .card_info h1 {
+  font-family: 'Fraunces', serif;
+  font-size: 1.6rem;
+  font-weight: 700;
+  color: var(--very-dark-blue);
+  margin-bottom: 0.8rem;
 }
 
 /* FOOTER */
