--- a/style.css
+++ b/style.css
@@ -22,20 +22,15 @@
 }
 
 body {
-  width: 100vw;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   overflow: hidden;
   background-color: var(--background);
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 14px;
-  background-color: var(--background);
-}
-
-main {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
 }
 
 /* CARD */
@@ -45,20 +40,15 @@ main {
   display: flex;
   align-items: start;
   justify-content: center;
-  width: 30.5rem;
-  height: 24.4rem;
-  margin: auto;
+  max-width: 30.5rem;
   border-radius: 0.4rem;
 }
 
 /* CARD IMG */
 
-.card .card_img {
-  height: 100%;
-}
-
 .card .card_img img {
-  height: 100%;
+  display: flex;
+  max-height: 24.4rem;
   border-radius: 0.4rem 0 0 0.4rem;
 }
 
@@ -100,7 +90,6 @@ main {
 /* PRICES */
 
 .card .card_info .prices {
-  width: 100%;
   display: flex;
   align-items: center;
   gap: 0.8rem;
@@ -162,8 +151,7 @@ main {
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    width: 16.8rem;
-    height: 32.5rem;
+    max-width: 16.8rem;
     margin: auto;
     border-radius: 0.4rem;
   }
@@ -174,7 +162,7 @@ main {
 
   .card .card_img img {
     width: 100%;
-    height: 13rem;
+    max-height: 13rem;
     object-fit: cover;
     object-position: center;
     border-radius: 0.4rem 0.4rem 0 0;
@@ -182,6 +170,10 @@ main {
 
   .card .card_info {
     margin: 0.8rem 1rem;
+  }
+
+  .card .card_info h1 {
+    font-size: 1.6rem;
   }
 
   .card .card_info h1, .card .card_info p {
